# djvu_outliner

./: README.md  pyproject.toml
djvu_outliner/: loader.py  main.py  structures.py
